now, rough draft is complete

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -60,3 +60,4 @@
 \newacronym{CPA}{CPA}{chirped pulse amplification}
 \newacronym{HHG}{HHG}{high-harmonic generation}
 \newacronym{RCF}{RCF}{radio-chromic film}
+\newacronym{ReLU}{ReLU}{Rectified Linear Unit}
