--- a/app1.tex
+++ b/app1.tex
@@ -158,7 +158,7 @@ To analyze which factors influence the numerical heating gain, we first looked a
 
 
 \begin{equation}
-	\frac{1}{n_\mathrm{ppc,eff}} \rightarrow \frac{1}{n_\mathrm{ppc,e}} + \frac{Z^*_O-1}{n_\mathrm{ ppc,O}} +\frac{Z^*_C-1}{n_\mathrm{ppc,C}}
+	\frac{1}{n_\mathrm{ppc,eff}} = \frac{1}{n_\mathrm{ppc,e}} + \frac{Z^*_O-1}{n_\mathrm{ ppc,O}} +\frac{Z^*_C-1}{n_\mathrm{ppc,C}}
 	\label{eq:neff}
 \end{equation}
 where $Z_O^*$ and $Z_C^*$ are the effective ionization states\footnote{The ionization states were subtracted by 1 because the simulation started out singly ionized.} of oxygen and carbon that were extracted from the simulations and reported in \autoref{tab:Zeff}. These ionization states were calculated by taking a sum of the ionization state (e.g. $Z = {1, 2, 3, \ldots}$) weighted by the macro-particle count in each state and dividing by the total macro-particle count.
