--- a/chap2.tex
+++ b/chap2.tex
@@ -47,7 +47,7 @@ and has a minimum value at the \emph{beam waist} $w(0) \equiv w_0$ at the focal 
 	\label{fig:gaussian_beam}
 \end{figure}
 
-The peak intensity is related to the electric field by $I_0 = \frac{1}{2} \epsilon_0 c E_0^2$ and \cref{eq:gaussian_beam} shows that the intensity decays as $I(x, r) = I_0 (w_0 / w(x))^2 \exp(-2 r^2 / w(x)^2)$ with increasing $r$ and $x$. If we integrate this intensity distribution over the entire $y-z$ plane (at $x=0$), we obtain the peak power $P_0 = \frac{\pi \omega_0^2}{2} I_0$. Furthermore, we can integrate the power over the pulse duration pulse has a $\sin^2(t)$ envelope\footnote{As with most things in physics, when there's an oscillating or pulsed quantity, it typically follows a sinusoidal distribution. The pulse envelope is related to the intensity which is proportional to the square of the electric field. It is possible for the pulse shape to be slightly different (like a gaussian function), but the expressions for energy and pulse FWHM do not change significantly.}) to obtain the total energy in the pulse 
+The peak intensity is related to the electric field by $I_0 = \frac{1}{2} \epsilon_0 c E_0^2$ and \cref{eq:gaussian_beam} shows that the intensity decays as $I(x, r) = I_0 (w_0 / w(x))^2 \exp(-2 r^2 / w(x)^2)$ with increasing $r$ and $x$. If we integrate this intensity distribution over the entire $y-z$ plane (at $x=0$), we obtain the peak power $P_0 = \frac{\pi \omega_0^2}{2} I_0$. Furthermore, we can integrate the power over the pulse duration pulse has a $\sin^2(t)$ envelope\footnote{As with most things in physics, when there's an oscillating or pulsed quantity, it typically follows a sinusoidal distribution. The pulse envelope is related to the intensity which is proportional to the square of the electric field. It is possible for the pulse shape to be slightly different (like a gaussian function), but the expressions for energy and pulse \gls{FWHM} do not change significantly.}) to obtain the total energy in the pulse 
 
 \begin{equation}
 	E = \frac{\pi \omega_0^2}{2} I_0 \tau_\text{fwhm} \label{eq:gaussian_beam_energy}
