--- a/chap5.tex
+++ b/chap5.tex
@@ -292,7 +292,7 @@ From this new modified model, we generated a training dataset of 1,525,000 point
 
 We used the same outputs as before: $E_\text{max}$, $E_\text{tot}$, and $E_\text{avg}$. Since the new contrast parameter can make the proton energies get arbitrarily low, we set a floor to these outputs energies of 1 keV, 1 nJ, and 1 keV respectively. This was motivated by the finite energy resolution of ion energy detectors and preventing the \gls{MAPE} metric from getting a division by zero error. Additionally, the acceleration time multiplier (see \autoref{eq:fuchs_multiplier}) was increased to 25 to balance out the lower predicted proton energies from the new physics model's larger effective thickness (\autoref{eq:d_eff}). The features of this new model can be seen in \autoref{fig:density_profile} which highlight the characteristic \emph{dip} in the proton energy at peak focus obtained from Morrison et al. \cite{Morrison_2018_NJoP}.
 
-We used a \gls{NN} model like the previous work in \autoref{sec:first_analysis}, but modified the other two models. The \gls{SVR} was not able to handle more than a few hundred thousand data points and for this reason, it was not used. Instead, we used the more elementary \gls{POLY} due to its simplicity which can be used as a baseline model without \gls{GPU} accelerated computations. The \gls{POLY} model could fit the data in \autoref{sec:first_analysis} accurately, but it does not work well with the added complexity in the new model (which will be seen later). Then, we replaced the exact \gls{GPR} with the \gls{SVGP} (see \cite{Hensman_2014_SVGP}) which assumes a variational distribution over some amount of inducing points, restricting the training data to a representative subset. This allows the \gls{SVGP} to be trained on data sets of order one million points in mini-batches just like the \gls{NN}. Like before, we summarize the hyperparameters in \autoref{tab:hps2}.  Finally, we replaced the standard z-score normalization with min-max scaling -- a linear scaling that scales the minimum value of a particular data column to be 0 and the maximum value to be 1. Min-max scaling was chosen to better represent the nature of parameter selection: uniform sampling between some minimum and maximum value.
+We used a \gls{NN} model like the previous work in \autoref{sec:first_analysis}, but modified the other two models. The \gls{SVR} was not able to handle more than a few hundred thousand data points and for this reason, it was not used. Instead, we used the more elementary \gls{POLY} due to its simplicity which can be used as a baseline model without \gls{GPU} accelerated computations. The \gls{POLY} model could fit the data in \autoref{sec:first_analysis} accurately, but it does not work well with the added complexity in the new model (which will be seen later). Then, we replaced the exact \gls{GPR} with the \gls{SVGP} (see \cite{Hensman_2014_SVGP}) which assumes a variational distribution over some amount of inducing points, restricting the training data to a representative subset. This allows the \gls{SVGP} to be trained on data sets of order one million points in mini-batches just like the \gls{NN}. Like before, we summarize the hyperparameters in \autoref{tab:hps2} (and the architecture can be visualized in \autoref{fig:nn_arch}).  Finally, we replaced the standard z-score normalization with min-max scaling -- a linear scaling that scales the minimum value of a particular data column to be 0 and the maximum value to be 1. Min-max scaling was chosen to better represent the nature of parameter selection: uniform sampling between some minimum and maximum value.
 
 \begin{table}
 	\centering
