--- a/desai.bib
+++ b/desai.bib
@@ -27,14 +27,15 @@
 	year         = 2024,
 	publisher    = {Zenodo},
 	doi          = {10.5281/zenodo.14009491},
-	url          = {https://doi.org/10.5281/zenodo.14009491}
+	url          = {https://doi.org/10.5281/zenodo.14009491}, 
+	howpublished = {\url{https://doi.org/10.5281/zenodo.14009491}}
 }
 
 @misc{Desai_2024_Zenodo,
 	author       = {Desai, Ronak},
-	title        = {Datasets and code from "Applying machine learning 
+	title        = {Datasets and code from ``Applying machine learning 
 	methods to laser acceleration of protons: lessons
-	learned from synthetic data"},
+	learned from synthetic data''},
 	month        = {July},
 	year         = {2024},
 	publisher    = {Zenodo},
