--- a/motivation.bib
+++ b/motivation.bib
@@ -28,8 +28,15 @@
 @misc{MeetOpticsPost, 
 	title={Laser fundamentals: operation and beam characteristics},
 	author={MeetOptics}, 
-	url = {https://www.meetoptics.com/academy/laser-fundamentals#how-do-lasers-work}, 
+	howpublished = {\url{https://www.meetoptics.com/academy/laser-fundamentals#how-do-lasers-work}}, 
 	note = {Accessed: 2025-01-30}
+}
+
+@misc{WarpX_documentation, 
+	title={Particle-in-Cell Method},
+	author={WarpX collaboration}, 
+	howpublished = {\url{https://warpx.readthedocs.io/en/latest/theory/pic.html}}, 
+	note = {Accessed: 2025-02-07}
 }
 
 @article{Yakovlev_2014_QE,
@@ -149,7 +156,7 @@
 
 @misc{LANL_PRAD, 
 	author = {Los Alamos Neutron Science Center}, 
-	url = {https://lansce.lanl.gov/facilities/pRad/index.php}, 
+	howpublished = {\url{https://lansce.lanl.gov/facilities/pRad/index.php}},
 	year	= {2023},
 	title   = {Proton Radiography},
 	note = {Accessed: 2025-01-31}
@@ -191,7 +198,8 @@
 	author = {Mayo Clinic Staff}, 
 	title = {Radiation Therapy}, 
 	year = {2024}, 
-	note={\url{https://www.mayoclinic.org/tests-procedures/radiation-therapy/about/pac-20385162}}
+	howpublished = {\url{https://www.mayoclinic.org/tests-procedures/radiation-therapy/about/pac-20385162}},
+	note={Accessed: 02-07-2025}
 }
 
 
@@ -249,14 +257,16 @@
 	author  = {NobelPrize.org},
 	year	= {2023},
 	title   = {Press Release},
-	url     = {https://www.nobelprize.org/prizes/physics/2023/press-release/}
+	howpublished = {\url{https://www.nobelprize.org/prizes/physics/2023/press-release/}}, 
+	note = {Accessed: 2024-12-19}
 }
 
 @misc{Nobel_2018,
 	author  = {NobelPrize.org},
 	year	= {2018},
 	title   = {Press Release},
-	url     = {https://www.nobelprize.org/prizes/physics/2018/press-release/}
+	howpublished = {\url{https://www.nobelprize.org/prizes/physics/2018/press-release/}}, 
+	note = {Accessed: 2024-12-19}
 }
 
 @article{Strickland_1985_Optics,
