--- a/chap3.tex
+++ b/chap3.tex
@@ -69,7 +69,7 @@ where $\tilde{x} \equiv x / \Delta x$ normalizes the position $x$. See \cref{fig
 \begin{figure}
 	\centering 
 	\includegraphics[width=0.8\linewidth]{planning/images/yee_grid.PNG}
-	\caption{The ``Yee'' grid is depicted (left) where the electric and magnetic field components are staggered by half a cell. The fields, currents, position, and velocity make use of the staggered grid by leapfrog time integration (right). This picture was taken from the WarpX documentation}
+	\caption{The ``Yee'' grid is depicted (left) where the electric and magnetic field components are staggered by half a cell. The fields, currents, position, and velocity make use of the staggered grid by leapfrog time integration (right). This picture was taken from the WarpX documentation \cite{WarpX_documentation} (which is another PIC code).}
 	\label{fig:yee_grid}
 \end{figure}
 
@@ -164,12 +164,52 @@ A polynomial model is one simple model that involves minimizing the \gls{MSE} be
 \begin{equation}
 	\hat{y} = \beta_{0,0} + \beta_{1,0} x_1 + \beta_{0,1} x_2 + \beta_{1,1} x_1 x_2 + \cdots
 \end{equation}
-where $\beta_{i,j}$ are the polynomial coefficients. This equation incorporated two inputs $x_1$ and $x_2$ but can be generalized for any number of inputs. These coefficients can be found by a least-squares minimization algorithm. 
+where $\beta_{i,j}$ are the polynomial coefficients. This equation incorporated two inputs $x_1$ and $x_2$ but can be generalized for any number of inputs. These coefficients can be found by a least-squares minimization algorithm \cite{Geron_2023_ML}. 
 
 In principle, any dataset can be fit by a polynomial model of a sufficiently high degree. However, such a model would be prone to overfitting -- a good model with predictive power should be able to predict data not yet seen. Wolpert \cite{Wolpert_1997_IEEE} famously showed in his 1996 paper that if we don't make any assumptions about the data at hand, then there is no reason to prefer a particular \gls{ML} model over another. This is sometimes referred to as the \emph{no free lunch} theorem. Therefore, it is always instructive to experiment with a variety of models to see which one works best. 
 
-Instead of a polynomial, more sophisticated regression models can be used like the ridge regression which uses a regularization hyperparameter to avoid overfitting. In a similar vein, \gls{SVR} (which falls in the class of support vector machines) use a regularization parameter that tries to maximize the number of data points that are close to the prediction but do not exactly match the prediction. A big advantage of the \gls{SVR} is that it can take advantage of the so-called ``kernel trick'' which allows the model to use higher dimensional features (like the polynomial model), but without explicitly calculating all the higher order components. Importantly, this has both time and memory saving implications. A common ``kernel'' is the \gls{RBF} which calculates a similarity measure between two data points involving a dot product which is easy to compute. 
+Instead of a polynomial, more sophisticated regression models can be used like the ridge regression which uses a regularization hyperparameter to avoid overfitting. In a similar vein, \gls{SVR} (which falls in the class of support vector machines) uses a regularization parameter that tries to maximize the number of data points that are close to the prediction within some margin. A big advantage of the \gls{SVR} is that it can take advantage of the so-called ``kernel trick'' which allows the model to use higher dimensional features (like the polynomial model), but without explicitly calculating all the higher order components. Importantly, this has both time and memory saving implications. A common ``kernel'' is the \gls{RBF} which calculates a similarity measure between two data points involving a dot product and is easy to compute. 
 
-Another regression method that can make use of the kernel trick is the Gaussian Process -- a method that doesn't just construct one function to fit the data, but rather a distribution of functions that all fit the data. The functions can effectively be averaged to create a \gls{GPR} or an uncertainty can be quantified by taking a standard deviation of this probability distribution. These are particularly useful in the context of \gls{BO} where the uncertainty information can inform new parameters to explore when data is expensive or difficult to obtain.
+Another regression method that can make use of the kernel trick is the Gaussian Process -- a method that doesn't just construct one function to fit the data, but rather a distribution of functions that all fit the data. The functions can effectively be averaged to create a \gls{GPR} or an uncertainty can be quantified by taking a standard deviation of the distributions at a particular point. These are particularly useful in the context of \gls{BO} where the uncertainty information can inform new parameters to explore when data is expensive or difficult to obtain.
 
-A more general purpose model capable of learning functions of extremely high complexity is the \gls{NN}. This model, just like a linear regression, fits an intercept and coefficients to each input variable. Unlike the linear regression, the output of the first linear regression is the input of a  ...
+\begin{figure}
+	\centering 
+	\includegraphics[width=0.8\linewidth]{planning/images/nn_basic.eps}
+	\caption{A neural network architecture with labeled weights between the nodes in adjacent layers. This network has 2 inputs, 1 output, and 2 hidden layers (which have 3 or 2 nodes in each).}
+	\label{fig:nn_basic}
+\end{figure}
+
+A more general purpose model capable of learning functions of high complexity is the \gls{NN}. This model, just like a linear regression, fits an intercept and coefficients to each input variable. However, the \gls{NN} chains many of these linear regressions together -- that is the output of one linear regression becomes the input of the next linear regression. The intermediary outputs are computed in the \emph{hidden layers}. Since a sequence of linear regressions will only produce another linear regression, \emph{activation functions} are needed to introduce non-linearity between the layers. The simplest activation function is the \gls{ReLU} which is defined as
+
+\begin{equation}
+	\text{ReLU}(x) =
+	\begin{cases}
+	 x &\text{ if } x > 0 \\
+	 0 &\text{ otherwise }
+	\end{cases}
+\end{equation}  
+To illustrate how this model works, one can look at \autoref{fig:nn_basic}. This network shows nodes that are connected by weights $w_{ijk}$ where $i$ is the vertical position of the node in the previous layer, and $j$ is the numbered hidden layer, and $k$ is the vertical position of the node in the current layer. To calculate $H_{1,1}$ for example, one would take a sum of the inputs multiplied by corresponding weights with an additional bias term (and then apply an activation function)
+
+\begin{equation}
+	H_{1,1} = \text{ReLU}(b_{11} + w_{111} x_1 + w_{211} x_2)
+\end{equation}
+or more generally $H_{1,k} = b_{1k} + \sum_{i} w_{i1k} x_i$. To calculate $H_{2,1}$ one would need to add up the contributions from $H_{1,1}$, $H_{1, 2}$, and $H_{1, 3}$
+
+\begin{equation}
+	H_{2,1} = \text{ReLU}(w_{121} H_{1,1} + w_{221} H_{1,2} +w_{321} H_{1,3})
+\end{equation}
+In this way, the intermediary hidden layers provide a number of free parameters equal to the number of weights $w_{ijk}$ (the number of edges) added to the number of bias terms $b_{ijk}$ (the total number of nodes excluding the input layer). Due to the interconnected nature of the model, the output will depend on every edge weight that is along the path from an input node to the specified output node. To train the \gls{NN}, one can employ the method of \emph{gradient descent}. This involves calculating the gradient of a designated error metric (like the \gls{MSE}) with respect to the model parameters (weights and biases). These gradients inform how the model should be updated to minimize the \gls{MSE}. If $\theta$ is a model parameter, this update is given as 
+
+\begin{equation}
+	\theta_\text{new} = \theta_\text{old} - \eta \nabla_\theta \text{MSE}(\theta) \label{eq:gradient_descent}
+\end{equation}
+Here, $\eta$ is called the \emph{learning rate} and is a scale factor that controls the magnitude of the update. This is an iterative procedure where at each step, the model output is calculated and the weight updates are computed from the gradients\footnote{The model output calculation is sometimes called the ``forward pass'' and gradient update is sometimes called the ``backward pass'' or ``back-propagation''.}. Each of these iterations is called an \emph{epoch} which can furthermore be divided by training the data in multiple batches (instead of all the data with one pass). The training process can terminate after a specified number of epochs or a stopping criteria can be established when the \gls{MSE} reaches a certain value.
+
+In general, the more nodes and hidden layers a model has, the more free parameters can be trained. The \gls{NN} model used in \autoref{sec:second_analysis} uses an architecture with 12 hidden layers and 64 neurons per layer for a total of 2,929,155 free parameters and can be visualized in \autoref{fig:nn_arch}.
+
+\begin{figure}
+	\centering 
+	\includegraphics[width=0.95\linewidth]{planning/images/nn_architecture2.eps}
+	\caption{The neural network architecture used in \autoref{sec:second_analysis}. This network has 4 inputs, 3 outputs, 12 hidden layers, and 64 neurons per hidden layer.}
+	\label{fig:nn_arch}
+\end{figure}
