abstract/intro edits

--- a/chap1.tex
+++ b/chap1.tex
@@ -3,8 +3,7 @@ This chapter introduces ultra-intense lasers, gives applications of laser-accele
 
 \section{Lasers} \label{sec:lasers}
 
-The word laser should actually be written as ``LASER'' because it is an acronym: light amplification by stimulated emission of radiation. Stimulated emission refers to Albert Einstein's idea that photons (particles of light) could ``stimulate'' atoms to produce identical photons \cite{Einstein_1917_Quantum}. These identical photons form a coherent light source which possess the same quantum-mechanical phase and wavelength. It wasn't until 1954 that Charles Townes and Arthur Schawlow first explored using stimulated emission to generate electromagnetic radiation\footnote{Electromagnetic radiation is just another word for light and is made up of oscillating electric and magnetic fields. The distance between adjacent wave crests in the fields is called the wavelength. Visible light has a wavelength between 400 and 700 nanometers and other forms of light (invisible to the naked eye) are similarly classified according to their wavelengths: radio, microwave, infra-red, ultra-violet, x-ray, gamma.} with a device called the maser (because it produced \emph{microwave} wavelength light). Today, these devices are more often called lasers because they produce \emph{light} in other wavelengths (like visible and infrared).
-
+The word laser should actually be written as ``LASER'' because it is an acronym: light amplification by stimulated emission of radiation. Stimulated emission refers to Albert Einstein's 1917 paper which suggested photons (particles of light) could ``stimulate'' atoms to produce identical photons \cite{Einstein_1917_Quantum}. These identical photons form a coherent light source which possess the same quantum-mechanical phase and wavelength. It wasn't until 1954 that Charles Townes and Arthur Schawlow first explored using stimulated emission to generate electromagnetic radiation\footnote{Electromagnetic radiation is just another word for light and is made up of oscillating electric and magnetic fields. The distance between adjacent wave crests in the fields is called the wavelength. Visible light has a wavelength between 400 and 700 nanometers and other forms of light (invisible to the naked eye) are similarly classified according to their wavelengths: radio, microwave, infra-red, ultra-violet, x-ray, gamma.} with a device called the \emph{maser} (because it produced \emph{microwave} wavelength light). In 1960, a similar device was constructed by Theodore Maiman at Hughes Research Laboratories that produced visible wavelength light\cite{Maiman_1960_Nature}. Maiman's device extended the maser to \emph{light} of different frequencies in what is now known as a \emph{laser}.
 
 \begin{figure}
 	\centering
@@ -13,7 +12,7 @@ The word laser should actually be written as ``LASER'' because it is an acronym:
 	\label{fig:laser_gain}
 \end{figure}
 
-A typical laser operates by adding energy to some material from a strong flash of light called the pump source. This material is called the active lasing medium. The atoms in the medium absorb light which excites electrons to higher energy states. Over time, these electrons relax back into lower energy states, emitting photons that collide with excited atoms to stimulate emission of more photons. The medium is situated in an optical cavity (or resonator) which is composed of two reflecting mirrors that bounce these photons back and forth many times. With each reflection, photons pass back through the lasing medium, gaining more photon energy through stimulated emission in the process. As a result, the active lasing medium is sometimes called the gain medium. Since one of the reflectors is only partially reflective, some of this laser light will pass through to become an external laser beam. This process is visualized in \autoref{fig:laser_gain}.
+A typical laser operates by adding energy to some material, called the active lasing medium, from a pump source. The pump source can either be a strong flash of light or a seed pulse from a lower powered laser. The atoms in the medium absorb light which excites electrons to higher energy states. Over time, photons collide with excited atoms to stimulate emission of more photons. The medium is situated in an optical cavity (or resonator) composed of two reflecting mirrors that bounce these photons back and forth many times. With each reflection, photons pass back through the lasing medium, gaining more photon energy through stimulated emission in the process. As a result, the active lasing medium is sometimes called the gain medium. Since one of the reflectors is only partially reflective, some of this laser light will pass through to become an external laser beam. This process is visualized in \autoref{fig:laser_gain}.
 
 Lasers are best known for their ability to produce focused, high intensity light at a particular wavelength. Low powered lasers can be used as a laser pointer for a presentation, while higher powered lasers can cut solids in half. From both fundamental physics and industry perspectives, scientists are interested in increasing the intensity of lasers to explore various \gls{HEDS} phenomena. The most basic definition of intensity is
 
@@ -28,16 +27,16 @@ So, for a given laser pulse, increasing the intensity would involve increasing t
 	\caption{The stretch, amplification, and compression stages of chirped pulse amplification are depicted. Taken from \cite{Arrigoni_2019_Photonics}.}
 	\label{fig:cpa}
 \end{figure}
-The \gls{CPA} technology enabled lasers to produce high energy, extremely short femtosecond (a billionth of a millionth of a second) long pulses that drove intensities into the relativistic regime where electrons can be accelerated to (nearly) the speed of light. The history of laser intensity since the production of the first laser in 1960 is depicted in \autoref{fig:laser_history}. The graph shows that between 1970-1985, laser intensities did not increase very much, but the invention of \gls{CPA} allowed intensities to increase 2-3 orders of magnitude every decade. The most intense lasers today are capable of accelerating protons near the speed of light in the so-called ultra-relativistic regime. If the intensities of lasers continue to increase in the coming decades, physics at the most fundamental level could be explored by analyzing what is going on inside the nucleus of an atom. These intensities would provide insights into the fields of quantum electrodynamics and quantum chromodynamics. 
+The \gls{CPA} technology enabled lasers to produce high energy, extremely short femtosecond (a billionth of a millionth of a second) long pulses that drove intensities into the relativistic regime where electrons can be accelerated to (nearly) the speed of light. The history of laser intensity since the production of the first laser in 1960 is depicted in \autoref{fig:laser_history}. The graph shows that between 1970-1985, laser intensities did not increase very much, but the invention of \gls{CPA} allowed intensities to increase 2-3 orders of magnitude every decade. The most intense lasers today are capable of accelerating protons near the speed of light in the so-called ultra-relativistic regime.
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.75\linewidth]{planning/images/laser_history.PNG}
-	\caption{History of focused laser intensities from the inception of the laser in 1960. The graph is labeled with intensity regimes, technological milestones, and acronyms of laser facilities. Taken from Figure 4 in Yakovlev \cite{Yakovlev_2014_QE}.}
+	\caption{History of focused laser intensities from the inception of the laser in 1960. The graph is labeled with intensity regimes, technological milestones, and acronyms of laser facilities. Modified from Figure 4 in Yakovlev \cite{Yakovlev_2014_QE} where OSU's Scarlet Laser was added.}
 	\label{fig:laser_history}
 \end{figure}
 
-In this work, the lasers mentioned employ a titanium sapphire gain medium which is produced by doping (adding impurity) titanium ions in a sapphire\footnote{Corundrums are a mineral composed of aluminum oxide ($\text{Al}_2\text{O}_3$) with trace amounts of impurities that replace a small fraction of the aluminum ions. Blue sapphires have trace amounts of titanium and iron, while rubies have trace amounts of chromium.} crystal. These typically output micron wavelength (infra-red) laser beams and are very commonly used in laser facilities across the globe.
+The laser at the Wright-Patterson Air Force base employs a titanium sapphire (Ti:Sapph) gain medium which is produced by doping (adding impurity) titanium ions in a sapphire\footnote{Corundrums are a mineral composed of aluminum oxide ($\text{Al}_2\text{O}_3$) with trace amounts of impurities that replace a small fraction of the aluminum ions. Blue sapphires have trace amounts of titanium and iron, while rubies have trace amounts of chromium.} crystal. These typically output micron wavelength (infra-red) laser beams and are very commonly used in laser facilities across the globe. The Titan laser at \gls{JLF} uses a neodymium glass (Nd:glass) gain medium which is also configured for micron wavelengths. These two lasers are the source of the proton acceleration experiments found in this work.
 
 
 \section{Applications}
@@ -49,22 +48,22 @@ During the course of my PhD, I have worked on ways to optimize the \gls{TNSA} me
 
 \subsection{Proton Therapy}
 
-Finding a cure for cancer is one of the largest medical challenges faced worldwide and cancer generally requires the use of harsh treatments like invasive surgery, chemotherapy, and immunotherapy. Another relevant treatment is called radiotherapy and more than half of all people with cancer will receive it as a part of their medical care \cite{Mayo_2024_Cancer}. Typically, a large machine will provide a source of x-rays (a type of energetic ionizing radiation) that kills the tumor. However, this radiation does not discern whether the cells are cancerous or not -- healthy tissue along the radiation beam path surrounding the tumor will also be damaged. This damage can be mitigated by shooting many beams from different angles such that they overlap at the site of the tumor. In this way, the dose delivered in the beam overlap region will be significantly higher than the surrounding tissue. This approach is typically employed by situating the machine on a rotating ``gantry''
+Finding a cure for cancer is one of the largest medical challenges faced worldwide and cancer generally requires the use of harsh treatments like invasive surgery, chemotherapy, and immunotherapy. Another relevant treatment is called radiotherapy and more than half of all people with cancer will receive it as a part of their medical care \cite{Mayo_2024_Cancer}. Typically, a large machine will provide a source of high energy x-rays that kills the tumor. However, this radiation does not discern whether the cells are cancerous or not -- healthy tissue along the radiation beam path surrounding the tumor will also be damaged. This damage can be mitigated by shooting many beams from different angles such that they overlap at the site of the tumor. In this way, the dose delivered in the beam overlap region will be significantly higher than the surrounding tissue. This approach is typically employed by situating the machine on a rotating ``gantry''
 
-As early as 1905, Bragg \cite{Bragg_1905_JOS} identified that charged particles have different properties than x-rays when passing through matter. Specifically, he identified that radium particles lost more energy (i.e. delivered a higher dose) at a lower speed. Physically, the slower the radium particles, the more time it has to interact with each of the individual atoms and the more energy it can deposit. This means that when the radium first enters a material at its highest speed, it is losing energy slowly. In contrast, when the radium is at a slow speed and about to stop, it is losing energy very quickly. In 1946, Wilson \cite{Wilson_1946_Rad} identified that this property of charged particles enables the deliver of a concentrated dose close to a tumor site. In \autoref{fig:bragg_curve}, these differences are explicitly highlighted between x-rays and proton beams traveling through water. It can be seen that the proton beam is sharply peaked at a particular distance of around 24 centimeters, where the x-ray beam delivers a higher dose just a few centimeters in. One can see the advantage of protons quite readily from this picture -- if a tumor is located 24 centimeters into the body, the protons, comparatively to the x-rays, will deliver more energy at the tumor site and less energy to the surrounding tissue. The shape of the proton beam curve in this graph is appropriately referred to as a ``Bragg Curve'' which peaks at the ``Bragg Peak''. 
+As early as 1905, Bragg \cite{Bragg_1905_JOS} identified that charged particles have different properties than x-rays when passing through matter. Specifically, he identified that radium particles lost more energy (i.e. delivered a higher dose) at a lower speed. Physically, the slower the radium particles, the more time it has to interact with each of the individual atoms and the more energy it can deposit. This means that when the radium first enters a material at its highest speed, it is losing energy slowly. In contrast, when the radium is at a slow speed and about to stop, it is losing energy very quickly. In 1946, Wilson \cite{Wilson_1946_Rad} recognized that this property of charged particles could deliver a concentrated dose close to a tumor site. In \autoref{fig:bragg_curve}, these differences are explicitly highlighted between x-rays and proton beams traveling through water. It can be seen that the proton beam is sharply peaked at a particular distance of around 24 centimeters, where the x-ray beam delivers a higher dose just a few centimeters in. One can see the advantage of protons quite readily from this picture -- if a tumor is located 24 centimeters into the body, the protons, comparatively to the x-rays, will deliver more energy at the tumor site and less energy to the surrounding tissue. Additionally, the dose delivered reduces to zero behind the tumor for protons which is not true for x-rays. The shape of the proton beam curve in this graph is appropriately referred to as a \emph{Bragg Curve} which peaks at the \emph{Bragg Peak}. 
 
-The specifics of the depth-dose curve depend on the material that the particles are traveling through as well as initial energy of the protons. These conditions are well-studied by empirical measurements of the \gls{SRIM} \cite{Ziegler_2010_SRIM} and can be combined with other techniques to achieve a depth-dose curve that not only peaks at different depths, but also has a \gls{SOBP} that expands the region where the highest dose is delivered. The most modern form of proton therapy is called \gls{IMPT} whose intensities are modulated to optimally balance tumor dose and sparing of normal tissues \cite{Mohan_2022_PRO}. The first proton therapy center opened at the Loma Linda University Medical Center in California in 1990, but today there are more than 100 centers around the world (with more in the planning or construction stage) \cite{Mohan_2022_PRO}. 
+The specifics of the depth-dose curve depend on the material that the particles are traveling through as well as initial energy of the protons. These conditions are well-studied by empirical measurements of the \gls{SRIM} \cite{Ziegler_2010_SRIM} and can be combined with other techniques to achieve a depth-dose curve that not only peaks at different depths, but widens the region where the highest dose is delivered. The most modern form of proton therapy is called \gls{IMPT} whose intensities are modulated to optimally balance tumor dose and sparing of normal tissues \cite{Mohan_2022_PRO}. The first proton therapy center opened at the Loma Linda University Medical Center in California in 1990, but today there are more than 100 centers around the world (with more in the planning or construction stage) \cite{Mohan_2022_PRO}. 
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.75\linewidth]{planning/images/bragg_curve.PNG}
-	\caption{The dose delivered as a function of depth traveled in water for two types of beams are depicted -- 200 MeV protons and 16 MV x-rays. Taken from Figure 1 in Mohan \cite{Mohan_2022_PRO}.}
+	\caption{The dose delivered as a function of depth traveled in water for two types of beams are depicted -- 200 MeV protons and 16 MV x-rays. Modified from Figure 1 in Mohan \cite{Mohan_2022_PRO}.}
 	\label{fig:bragg_curve}
 \end{figure}
  
 Here in Columbus, \gls{OSUCCC}, in collaboration with Nationwide Children's Hospital, opened a 55,000 square foot proton therapy center in December of 2023 \cite{OSU_CCC} that uses \gls{IMPT}. Despite all the aformentioned benefits of proton therapy, the intial cost is tremendous -- \gls{OSUCCC} was a 100 million dollar investment. The significant cost demonstrates the value this could bring to Central Ohio. The facility is even outfitted with the capability to perform FLASH therapy which is a newer, experimental form of proton therapy. Compared to conventional methods, FLASH uses much higher dose-rates (i.e. amount of dose per second) with much shorter exposure times (seconds) for the same total dose. The higher dose-rates have been shown to reduce radiation-induced toxicity in healthy tissues in pre-clinical trials \cite{Matuszak_2022_Onc} and is currently under clinical trials \cite{OSU_CCC}. 
 
-The conventional cyclotron accelerators used at \gls{OSUCCC} are extremely large and expensive which limits their availability to select locations globally. In recent years, it has been proposed that laser-based particle accelerators could be used to generate high energy protons. Just like FLASH therapy, laser-based sources are capable of delivering high dose-rates in extremely short exposure times. Also, laser facilities could in principle be smaller and less costly. On the other hand, the technology is not adequately matured to be considered in the near future \cite{Linz_2016_LaPB}. Laser-based sources are typically only able to generate protons in the 10s of MeV reliably (as opposed to the 100s of MeV required for clinical operation), possess orders of magnitude smaller numbers of protons, and poor reproducibility of the laser pulse output. In addition, the conventional accelerators have already made significant strides in terms of reducing cost, increasing beam quality, and reducing size in recent years \cite{Linz_2016_LaPB} which is something laser-based sources will need to keep up with in the future. However, the potential of developing a smaller, lower cost, higher dose rate proton accelerator remains an important motivating factor for many laser-plasma physicists in the coming years.
+The conventional cyclotron accelerators used at \gls{OSUCCC} are extremely large and expensive which limits their availability to select locations globally. In recent years, it has been proposed that laser-based particle accelerators could be used to generate high energy protons. Just like FLASH therapy, laser-based sources are capable of delivering high dose-rates in extremely short exposure times. Also, laser facilities could in principle be smaller and less costly. On the other hand, the technology is not matured enough to be considered in the near future \cite{Linz_2016_LaPB}. Laser-based sources are typically only able to generate protons in the 10s of MeV reliably (as opposed to the 100s of MeV required for clinical operation), possess orders of magnitude smaller numbers of protons, and poor reproducibility of the laser pulse output. In addition, the conventional accelerators have already made significant strides in terms of reducing cost, increasing beam quality, and reducing size in recent years \cite{Linz_2016_LaPB} which is something laser-based sources will need to keep up with in the future. However, the potential of developing a smaller, lower cost, higher dose rate proton accelerator remains an important motivating factor for many laser-plasma physicists in the coming years.
 
 \subsection{Proton Radiography and Laser Fusion}
 
@@ -94,7 +93,7 @@ While protons can generate images through radiography, they can also more genera
 
 As a proof of principle, Boivin \cite{Boivin_2022_NJoP} used TNSA beams from the \gls{ALLS} laser facility in Canada to determine the elemental mass concentrations of three different metal alloys: stainless steel, bronze, and  brass using \gls{XPIF}. This is compared to a method called \gls{EDX} used in conjunction a conventional mono-energetic electron beam and shown in \autoref{fig:mass_concentration}. Although XPIF has larger error bars than \gls{EDX}, both methods find good agreement with each other.
 
-As a final point, \gls{TNSA} beams can be accompanied by other radiation sources like electrons, x-rays, and neutrons. Different materials characterization process could, in principle, be used in conjunction with each other. While \gls{TNSA} beams are not the most common way to characterize materials today, they may emerge as an important tool for their ability to be pulsed at a high repetition rate and generated from a relatively compact system.
+As a final point, \gls{TNSA} beams can be accompanied by other radiation sources like electrons, x-rays, and neutrons. Different materials characterization processes could, in principle, be used in conjunction with each other. While \gls{TNSA} beams are not the most common way to characterize materials today, they may emerge as an important tool for their ability to be pulsed at a high repetition rate and generated from a relatively compact system.
 
 \section{Outline}
 In the last decade, machine learning has emerged as an increasingly important tool\footnote{This is especially clear from the past few years of generative AI with tools like Chat-GPT.} for understanding the vast volume of data present in this world. Scientists have already been using machine learning in other fields to make new discoveries, but the field of laser-driven proton acceleration has only started to make use of it. This is because machine learning requires an immense amount of data to provide a true benefit \cite{Dopp_2023_HPLSE} and most modern laser systems only produce around one pulse per second (or less). Before my time, our group produced \gls{TNSA} proton beams in 2018 \cite{Morrison_2018_NJoP} from a laser system that sends 1000 pulses a second. With this many pulses, collecting large amounts of data now becomes a reality. However, to realize applications, the \gls{TNSA} proton beams need to be optimized for specific use cases. 
