--- a/motivation.bib
+++ b/motivation.bib
@@ -4,6 +4,19 @@
 	pages={1–50}
 }
 
+@article{Maiman_1960_Nature,
+	title = {Stimulated Optical Radiation in Ruby},
+	author = {Maiman, T.},
+	journal = {Nature},
+	volume = {187},
+	issue = {4736},
+	pages = {493-494},
+	year = {1960},
+	month = {Aug},
+	doi = {10.1038/187493a0},
+	url = {https://doi.org/10.1038/187493a0}
+}
+
 @article{Arrigoni_2019_Photonics,
 	author = {Arrigoni, Marco and Tapié, Jean-Luc},
 	title = {Chirped Pulse Amplification},
